--- a/membership.html
+++ b/membership.html
@@ -80,7 +80,7 @@
 											</tr>
 											<tr>
 												<td>S.T.E.M. Program Fee</td>
-												<td>Program fee for the afternoon S.T.E.M Program</td>
+												<td>Program fee for the afternoon S.T.E.M. Program</td>
 												<td>TBD</td>
 											</tr>
 											<tr>
