--- a/schedule.html
+++ b/schedule.html
@@ -89,7 +89,7 @@
 												<td>12:50-1:00pm</td>
 											</tr>
 											<tr>
-												<td>Core Science</td>
+												<td>Core Sciences</td>
 												<td>Biology, Chemistry & Physics</td>
 												<td>1:00-1:50pm</td>
 											</tr>
