CC Partnership to Synchronize

--- a/index.html
+++ b/index.html
@@ -70,11 +70,11 @@
 								Instead of continuing with the CC Challenge program we're creating a separate, independent homeschool program for 7-12th graders with the following principles: 
 								<ul>
 									<li style="font-size: 130%"><b>Christian-based</b></li>
-									<li style="font-size: 130%"><b>Partnership with CC F/E Director</b></li>
+									<li style="font-size: 130%"><b>Synchronize with CC F/E Program</b></li>
 									<ul style="padding-left: 1em;margin: 0 0 0 0;">
 										<li style="list-style: none;font-size: 110%;">
 											Our goal is to support parents in our homeschool community who wish to keep their K-6th grade students in the CC F/E program, but who wish to enroll their 7-12th grade students in our S.T.E.M. & Companion programs.
-											We hope to offer weekly classes on the same day and in the same facility as the CC F/E program (but without interfering with the CC program).
+											We will offer weekly classes on the same day and in the same facility as the CC F/E program (but without interfering with the CC F/E program).
 										</li>
 									</ul>
 									<li style="font-size: 130%"><b>Comprehensive 7-12th Grade Curriculum</b></li>
