--- a/membership.html
+++ b/membership.html
@@ -74,13 +74,13 @@
 												<td>TBD</td>
 											</tr>
 											<tr>
-												<td>Companion Program Fee</td>
-												<td>Program fee for the morning Companion Program (non-S.T.E.M. classes)</td>
+												<td>HSS Program Fee</td>
+												<td>Program fee for the morning Humanities & Social Sciences Program</td>
 												<td>TBD</td>
 											</tr>
 											<tr>
-												<td>S.T.E.M. Program Fee</td>
-												<td>Program fee for the afternoon S.T.E.M. Program</td>
+												<td>STEM Program Fee</td>
+												<td>Program fee for the afternoon STEM Program</td>
 												<td>TBD</td>
 											</tr>
 											<tr>
