--- a/contact.html
+++ b/contact.html
@@ -50,8 +50,12 @@
 							<p>owner@cseg-bv.org</p>
 							<p>(406) 544-0081</p>
 							<br />
+							<p>Diane Norris, Humanities & Social Sciences Director</p>
+							<p>hssdirector@cseg-bv.org</p>
+							<p>(703) 200-3809</p>
+							<br />
 							<p>Elijah DePalma, S.T.E.M. Director</p>
-							<p>director@cseg-bv.org</p>
+							<p>stemdirector@cseg-bv.org</p>
 							<p>(406) 544-1106</p>
 						</div>
 						<br />
