--- a/index.html
+++ b/index.html
@@ -69,23 +69,23 @@
 								We're a local homeschool family with young children (Kindergarten-6th grade) enrolled in the <a href="https://classicalconversations.com/community-search/?cid=r5N&program=Foundations"><b>Classical Conversations (CC) Foundations & Essentials (F/E)</b></a> program. 
 								Instead of continuing with the CC Challenge program we're creating a separate, independent homeschool program for 7-12th graders with the following principles: 
 								<ul>
-									<li style="font-size: 130%"><b>Christian-based</b></li>
-									<li style="font-size: 130%"><b>Synchronize with CC F/E Program</b></li>
+									<li style="font-size: 130%"><b>Christian based</b></li>
+									<li style="font-size: 130%"><b>Synchronized with CC F/E Program</b></li>
 									<ul style="padding-left: 1em;margin: 0 0 0 0;">
 										<li style="list-style: none;font-size: 110%;">
-											Our goal is to support parents in our homeschool community who wish to keep their K-6th grade students in the CC F/E program, but who wish to enroll their 7-12th grade students in our S.T.E.M. & Companion programs.
+											Our goal is to support parents in our homeschool community who wish to keep their K-6th grade students in the CC F/E program, but who wish to enroll their 7-12th grade students in our S.T.E.M. and Humanities & Social Sciences programs.
 											We will offer weekly classes on the same day and in the same facility as the CC F/E program (but without interfering with the CC F/E program).
 										</li>
 									</ul>
 									<li style="font-size: 130%"><b>Comprehensive 7-12th Grade Curriculum</b></li>
 									<ul style="padding-left: 1em;margin: 0 0 0 0;">
-										<li style="list-style: none;font-size: 110%;">Morning Companion program (non-S.T.E.M.) covering language arts, history, geography, public speaking, etc.</li>
+										<li style="list-style: none;font-size: 110%;">Morning Humanities & Social Sciences program covering language arts, history, geography, public speaking, etc.</li>
 										<li style="list-style: none;font-size: 110%;">Afternoon S.T.E.M. program covering mathematics, core sciences and technology/engineering.</li>
 									</ul>
 									<li style="font-size: 130%"><b>Enrollment & Attendance Flexibility</b></li>
 									<ul style="padding-left: 1em;margin: 0 0 0 0;">
-										<li style="list-style: none;font-size: 110%;">Students can enroll in only the S.T.E.M program, only the Companion program, or both.</li>
-										<li style="list-style: none;font-size: 110%;">Enrolled students can take an a la carte approach to attending classes in their program.  For example, a student enrolled in the S.T.E.M program could attend only the core sciences & technology/engineering classes, but not the mathematics class.</li>
+										<li style="list-style: none;font-size: 110%;">Students can enroll in only the STEM program, only the HSS program, or both.</li>
+										<li style="list-style: none;font-size: 110%;">Enrolled students can take an a la carte approach to attending classes in their program.  For example, a student enrolled in the STEM program could attend only the core sciences & technology/engineering classes, but not the mathematics class.</li>
 										<li style="list-style: none;font-size: 110%;">Attendance is not required, but students are expected to keep up with the curriculum schedule.</li>
 									</ul>
 									<li style="font-size: 130%"><b>Low Cost</b></li>
