HSS Update Fix 1

--- a/index.html
+++ b/index.html
@@ -79,8 +79,8 @@
 									</ul>
 									<li style="font-size: 130%"><b>Comprehensive 7-12th Grade Curriculum</b></li>
 									<ul style="padding-left: 1em;margin: 0 0 0 0;">
-										<li style="list-style: none;font-size: 110%;">Morning Humanities & Social Sciences program covering language arts, history, geography, public speaking, etc.</li>
-										<li style="list-style: none;font-size: 110%;">Afternoon S.T.E.M. program covering mathematics, core sciences and technology/engineering.</li>
+										<li style="list-style: none;font-size: 110%;">Morning Humanities & Social Sciences (HSS) program covering language arts, history, geography, public speaking, etc.</li>
+										<li style="list-style: none;font-size: 110%;">Afternoon STEM program covering mathematics, core sciences and technology/engineering.</li>
 									</ul>
 									<li style="font-size: 130%"><b>Enrollment & Attendance Flexibility</b></li>
 									<ul style="padding-left: 1em;margin: 0 0 0 0;">
