--- a/schedule.html
+++ b/schedule.html
@@ -80,7 +80,7 @@
 											</tr>
 											<tr>
 												<td><b>Lunchtime Break</b></td>
-												<td><b>Break between HSS Program & S.T.E.M. Program</b></td>
+												<td><b>Break between HSS Program & STEM Program</b></td>
 												<td><b>12:00pm-12:50pm</b></td>
 											</tr>
 											<tr>
@@ -116,7 +116,7 @@
 							<h1>Curriculum</h1>
 							<p>Morning HSS classes will have required curriculum (details TBD). A detailed calendar of each week's lessons will be provided, and students will participate in a mock trial at the end of the semester.</p>
 							<br />
-							<p>Afternoon S.T.E.M. classes will have required curriculum (details TBD) which will include lab kits on certain dates. A detailed calendar of each week's lessons & required lab kits will be provided.</p>
+							<p>Afternoon STEM classes will have required curriculum (details TBD) which will include lab kits on certain dates. A detailed calendar of each week's lessons & required lab kits will be provided.</p>
 							<br />
 							<p>The hybrid mathematics group activity accommodates students of all levels (arithmetic thru calculus), allowing students to grow at their own level while in a group setting with peers. In the hybrid mathematics tutoring session students independently work on their own curriculum with tutors available for help.</p>
 						</div>
