--- a/guidelines.html
+++ b/guidelines.html
@@ -60,7 +60,7 @@
 							<br />
 							<p>Attendance is not required, but students are expected to keep up with the curriculum schedule.</p>
 							<br />
-							<p>Our program partners with the CC F/E program held on the same day at the same facility, allowing parents access to the childcare & playground.</p>
+							<p>Our program is synchronized with the CC F/E program held on the same day at the same facility, allowing parents access to the childcare & playground.</p>
 						</div>
 					</div>
 
