HSS Update Fix 2

--- a/schedule.html
+++ b/schedule.html
@@ -84,7 +84,7 @@
 												<td><b>12:00pm-12:50pm</b></td>
 											</tr>
 											<tr>
-												<td>S.T.E.M. Assembly</td>
+												<td>STEM Assembly</td>
 												<td>Opening prayer & announcements</td>
 												<td>12:50-1:00pm</td>
 											</tr>
