--- a/contact.html
+++ b/contact.html
@@ -47,7 +47,7 @@
 						<div class="inner">
 							<h1>Contact</h1>
 							<p>Cameron DePalma, Owner & Director</p>
-							<p>owner@cseg-bv.org</p>
+							<p>director@cseg-bv.org</p>
 							<p>(406) 544-0081</p>
 							<br />
 							<p>Diane Norris, Humanities & Social Sciences Director</p>
