Remove pending approval

--- a/contact.html
+++ b/contact.html
@@ -57,7 +57,7 @@
 						</div>
 						<br />
 						<div class="inner">
-							<h1>Location <span style="font-size:50%;">Pending Approval</span> </h1>
+							<h1>Location</h1>
 							<p>Hamilton Assembly of God</p>
 							<p>601 W Main St</p>
 							<p>Hamilton, MT</p>
