--- a/contact.html
+++ b/contact.html
@@ -52,13 +52,13 @@
 							<p>Diane Norris, Humanities & Social Sciences Director</p>
 							<p>hssdirector@cseg-bv.org</p>
 							<br />
-							<p>Elijah DePalma, S.T.E.M. Director</p>
+							<p>Elijah DePalma, STEM Director</p>
 							<p>stemdirector@cseg-bv.org</p>
 						</div>
 						<br />
 						<div class="inner">
 							<h1>Location</h1>
-							<p>Hamilton Assembly of God</p>
+							<p><a href="https://www.hamiltonag.org/">Hamilton Assembly of God</a></p>
 							<p>601 W Main St</p>
 							<p>Hamilton, MT</p>
 							
@@ -119,7 +119,7 @@
 								</article>
 							</section>
 							<ul class="copyright">
-								<li>&copy; Christian S.T.E.M. Education Group (CSEG). All rights reserved.</li>
+								<li>&copy; Christian STEM Education Group (CSEG). All rights reserved.</li>
 							</ul>
 						</div>
 					</footer>
