--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 					<div id="main">
 						<div class="inner">
 							<header>
-								<h1>Christian S.T.E.M. Education Group</h1>
+								<h1>Christian STEM Education Group</h1>
 								<h2 style="letter-spacing: 0.15em; font-weight: 800;">Bitterroot Valley, Montana</h2>
 								<span class="image main"><img src="images/2425_3217_Montana_Bitterroot_Mountains_lg.jpg" alt="" /></span>
 								<p style="font-size: 110%">	Great Father, thank you for the beautiful gift of our children. 
@@ -73,36 +73,36 @@
 									<li style="font-size: 130%"><b>Synchronized with CC F/E Program</b></li>
 									<ul style="padding-left: 1em;margin: 0 0 0 0;">
 										<li style="list-style: none;font-size: 110%;">
-											Our goal is to support parents in our homeschool community who wish to keep their K-6th grade students in the CC F/E program, but who wish to enroll their 7-12th grade students in our S.T.E.M. and Humanities & Social Sciences programs.
+											Our goal is to support parents in our homeschool community who wish to keep their K-6th grade students in the CC F/E program, but who wish to enroll their 7-12th grade students in our STEM and Humanities & Social Sciences programs.
 											We will offer weekly classes on the same day and in the same facility as the CC F/E program (but without interfering with the CC F/E program).
 										</li>
 									</ul>
 									<li style="font-size: 130%"><b>Comprehensive 7-12th Grade Curriculum</b></li>
 									<ul style="padding-left: 1em;margin: 0 0 0 0;">
-										<li style="list-style: none;font-size: 110%;">Morning Humanities & Social Sciences (HSS) program covering language arts, history, geography, public speaking, etc.</li>
-										<li style="list-style: none;font-size: 110%;">Afternoon STEM program covering mathematics, core sciences and technology/engineering.</li>
+										<li style="list-style: none;font-size: 110%;">Morning Humanities & Social Sciences (HSS) program covering logic, world history & literature, language arts, public speaking, etc.</li>
+										<li style="list-style: none;font-size: 110%;">Afternoon STEM program covering core sciences, technology & engineering, mathematics, etc.</li>
+										<li style="list-style: none;font-size: 110%;">Beginning Fall 2027 we hope to offer separate 10-12th grade programs.</li>
 									</ul>
 									<li style="font-size: 130%"><b>Enrollment & Attendance Flexibility</b></li>
 									<ul style="padding-left: 1em;margin: 0 0 0 0;">
 										<li style="list-style: none;font-size: 110%;">Students can enroll in only the STEM program, only the HSS program, or both.</li>
-										<li style="list-style: none;font-size: 110%;">Enrolled students can take an a la carte approach to attending classes in their program.  For example, a student enrolled in the STEM program could attend only the core sciences & technology/engineering classes, but not the mathematics class.</li>
+										<li style="list-style: none;font-size: 110%;">Enrolled students can take an a la carte approach to attending classes in their program.  For example, a student enrolled in the STEM program could attend only the core sciences & STEM elective classes, but not the mathematics class.</li>
 										<li style="list-style: none;font-size: 110%;">Attendance is not required, but students are expected to keep up with the curriculum schedule.</li>
 									</ul>
 									<li style="font-size: 130%"><b>Low Cost</b></li>
 									<ul style="padding-left: 1em;margin: 0 0 0 0;">
 										<li style="list-style: none;font-size: 110%;">
 											We are operating as a not-for-profit organization to serve our local homeschool community.
-											Program fees will only be collected to cover liability insurance, facility rent & tutor salaries. 
+											Program fees will only be collected to cover liability insurance, facility tithing & tutor salaries. 
 										</li>
 										<li style="list-style: none;font-size: 110%;">
-											Required curriculum & lab kits are purchased separately by the student.
+											Required curriculum & lab materials are purchased separately by the student.
 										</li>
 									</ul>
 									<li style="font-size: 130%"><b>Extra Curricular Activities</b></li>
 									<ul style="padding-left: 1em;margin: 0 0 0 0;">
 										<li style="list-style: none;font-size: 110%;">
-											We would like to be an information resource for extra curricular activities in our community such as family field trips & science fairs.
-											We also have skilled parents in our community who would like to offer workshops on welding, woodworking, etc., in their home or business, and we'd like to provide information for these workshops. 
+											We would like to provide an information resource for extra curricular activities in our community such as family field trips, science fairs, workshops offered by skilled parents on welding, woodworking, etc. 
 										</li>
 									</ul>
 								</ul>  
@@ -165,7 +165,7 @@
 								</article>
 							</section>
 							<ul class="copyright">
-								<li>&copy; Christian S.T.E.M. Education Group (CSEG). All rights reserved.</li>
+								<li>&copy; Christian STEM Education Group (CSEG). All rights reserved.</li>
 							</ul>
 						</div>
 					</footer>
