--- a/membership.html
+++ b/membership.html
@@ -46,10 +46,16 @@
 					<div id="main">
 						<div class="inner">
 							<h1>Membership</h1>
-							<p>Membership is for students ages 12-18 years of age (7th-12th grade equivalent).</p>
-							<p>Enrollment occurs prior to the beginning of each semester.</p>
-							<p>Enrolled students can take an a la carte approach to attending classes in their program.</p>
-							<p>Attendance is not required, but students are expected to keep up with the curriculum schedule.</p>
+							<p><b>May 1, 2025</b> &nbsp; Priority enrollment begins for Classical Conversations families.</p>
+							<p><b>June 1, 2025</b> &nbsp; Open enrollment begins for all community members.</p>
+							<p style="line-height: 30%"><br></p>
+							<p>Fall 2025 membership is for students ages 12-14 years of age (7th-8th grade equivalents).</p>
+							<p style="line-height: 80%"><br></p>
+							<p><b><a href="./pdfs/CSEG Family Application.pdf"><span style="color:blue">CSEG Enrollment Application</span></a></b></p>
+							<p style="line-height: 10%"><br></p>
+							<p><b><a href="./pdfs/CSEG Statement of Faith.pdf"><span style="color:blue">CSEG Statement of Christian Faith</span></a></b></p>
+							<p style="line-height: 10%"><br></p>
+							<p><b><a href="./pdfs/CSEG Code of Conduct.pdf"><span style="color:blue">CSEG Code of Conduct</span></a></b></p>
 							<br />
 							<section>
 								<h1>Fees</h1>
@@ -59,33 +65,33 @@
 											<tr>
 												<th>Name</th>
 												<th>Description</th>
-												<th>Fee</th>
+												<th>Semester Fee</th>
+												<th>Yearly Fee</th>
 											</tr>
 										</thead>
 										<tbody>
 											<tr>
 												<td>Facility Fee</td>
-												<td>Rent for facility use during the semester</td>
-												<td>TBD</td>
-											</tr>
-											<tr>
-												<td>Liability Insurance Fee</td>
-												<td>Liability insurance applies to the entire family onsite at the facility (and not only enrolled students)</td>
-												<td>TBD</td>
+												<td>Facility tithing & liability insurance</td>
+												<td>$50</td>
+												<td>$100</td>
 											</tr>
 											<tr>
 												<td>HSS Program Fee</td>
 												<td>Program fee for the morning Humanities & Social Sciences Program</td>
-												<td>TBD</td>
+												<td>$125</td>
+												<td>$250</td>
 											</tr>
 											<tr>
 												<td>STEM Program Fee</td>
-												<td>Program fee for the afternoon S.T.E.M. Program</td>
-												<td>TBD</td>
+												<td>Program fee for the afternoon STEM Program</td>
+												<td>$125</td>
+												<td>$250</td>
 											</tr>
 											<tr>
 												<td>Curriculum</td>
-												<td>Curriculum & lab kits are purchased separately (individual lab kits are required for each enrolled student)</td>
+												<td>Curriculum & lab materials are purchased separately by the student</td>
+												<td>---</td>
 												<td>---</td>
 											</tr>
 											
@@ -93,10 +99,13 @@
 										<tfoot>
 											<tr>
 												<td colspan="2"></td>
-												<td>TBD</td>
+												<td>$300</td>
+												<td>$600</td>
 											</tr>
 										</tfoot>
 									</table>
+									<p style="font-size: 110%">A CSEG Scholarship Fund is available for students requesting financial assistance. </p>
+									<p style="font-size: 110%">Private contributions to the CSEG Scholarship Fund are accepted.</p>
 								</div>
 							</section>
 						</div>
@@ -156,7 +165,7 @@
 								</article>
 							</section>
 							<ul class="copyright">
-								<li>&copy; Christian S.T.E.M. Education Group (CSEG). All rights reserved.</li>
+								<li>&copy; Christian STEM Education Group (CSEG). All rights reserved.</li>
 							</ul>
 						</div>
 					</footer>
