--- a/schedule.html
+++ b/schedule.html
@@ -47,7 +47,13 @@
 						<div class="inner">
 							<h1>Schedule</h1>
 							<section>
-								<h3 style="letter-spacing: 0.15em;">Classes held weekly, 15 weeks per semester (Beginning Sep 2025)</h6>
+								<h3 style="letter-spacing: 0.15em;">Classes held weekly on Mondays, 15 weeks per semester</h6>
+								<p style="font-size: 120%"><b>Fall 2025</b></p>
+								<p style="font-size: 120%">Sep 8 - Dec 15 <span style="font-size: 75%"> &nbsp; Student orientation in late Aug, details TBD </span></p>
+								<p style="line-height: 80%"><br></p>
+								<p style="font-size: 120%"><b>Spring 2026</b></p>
+								<p style="font-size: 120%">Jan 5 - Apr 14 </p>
+								<br />
 								<div class="table-wrapper">
 									<table class="alt">
 										<thead>
@@ -59,24 +65,35 @@
 										</thead>
 										<tbody>
 											<tr>
-												<td>Logic</td>
-												<td>Introductory logic covering syllogisms & fallacies</td>
+												<td>Logic & Philosophy</td>
+												<td>Introductory Logic and Philosophy
+													<br><a href="./pdfs/Logic & Philosophy.pdf"><span style="color:blue; font-size: 100%">Curriculum: Handouts w/ Optional Texts</span></a>
+												</td>
 												<td>8:30-9:00am</td>
 											</tr>
 											<tr>
-												<td>Language Arts</td>
-												<td>Reading Comphrehension & Writing</td>
+												<td>World History & Literature</td>
+												<td>Ancient, Medieval & Modern History and Literature 
+													<br><a href="./pdfs/Omnibus Primary I.pdf"><span style="color:blue; font-size: 100%">Curriculum: Omnibus Primary I</span></a> 
+												</td>
 												<td>9:00-9:50am</td>
 											</tr>
 											<tr>
-												<td>History & Geography</td>
-												<td>Ancient & modern history including world geography</td>
+												<td>HSS Elective</td>
+												<td><b>Fall 2025</b> &nbsp; US Civics
+													<br><a href="./pdfs/US Civics.pdf"><span style="color:blue; font-size: 100%">Curriculum: Lifepac Civics</span></a>
+													
+													<br><b>Spring 2026</b> &nbsp; Speech & Debate w/ Mock Trial Capstone Event
+													<br><a href="./pdfs/Speech & Debate.pdf"><span style="color:blue; font-size: 100%">Curriculum: TBD</span></a>
+												</td>
 												<td>10:00-10:50am</td>
 											</tr>
 											<tr>
-												<td>Public Speaking & Debate</td>
-												<td>Critical thinking, debate skills & mock trial preparation</td>
-												<td>11:00am-12:00pm</td>
+												<td>Language Arts</td>
+												<td>Grammar, Speaking & Writing, English 
+													<br><a href="./pdfs/Tracks for Language Arts I, II, III.pdf"><span style="color:blue; font-size: 100%">Curriculum: Lifepac Language Arts - Track A</span></a>
+												</td>
+												<td>11:00am-11:50am</td>
 											</tr>
 											<tr>
 												<td><b>Lunchtime Break</b></td>
@@ -85,40 +102,42 @@
 											</tr>
 											<tr>
 												<td>STEM Assembly</td>
-												<td>Opening prayer & announcements</td>
+												<td>Opening Prayer & Gratitudes
+													<br><a href="./pdfs/Weekly Gratitude Sheet.pdf"><span style="color:blue; font-size: 100%">Weekly Gratitudes</span></a>
+												</td>
 												<td>12:50-1:00pm</td>
 											</tr>
 											<tr>
-												<td>Core Sciences</td>
-												<td>Biology, Chemistry & Physics</td>
+												<td>General Sciences</td>
+												<td>Life, Physical, Earth & Space Sciences 
+													<br><a href="./pdfs/Tracks for General Sciences I, II, III.pdf"><span style="color:blue; font-size: 100%">Curriculum: Lifepac General Sciences I, II, III - Track A</span></a>
+												</td>
 												<td>1:00-1:50pm</td>
 											</tr>
 											<tr>
-												<td>Technology/Engineering</td>
-												<td>Aerospace, Computer Science, Artificial Intelligence, etc.</td>
+												<td>STEM Elective</td>
+												<td><b>Fall 2025 &nbsp; </b> Aerospace
+													<br><a href="./pdfs/AEX II (2020).pdf"><span style="color:blue; font-size: 100%">Curriculum: AEX II Activity Booklet</span></a>
+			
+													<br><b>Spring 2026 &nbsp; </b> Astronomy 
+													<br><a href="./pdfs/Astronomy Module.pdf"><span style="color:blue; font-size: 100%">Curriculum: AEX Astronomy Module</span></a>
+													& <a href="./pdfs/Astronomy Activity Booklet.pdf"><span style="color:blue; font-size: 100%">Activity Booklet</span></a>
+												</td>
 												<td>2:00-2:50pm</td>
 											</tr>
 											<tr>
-												<td>Hybrid Mathematics - Group Activity</td>
-												<td>Group mathematics lessons - all levels (no required curriculum)</td>
-												<td>3:00-3:30pm</td>
-											</tr>
-											<tr>
-												<td>Hybrid Mathematics - Individual Tutoring</td>
-												<td>Independent study & tutoring (students use their own curriculum)</td>
-												<td>3:30-4:00pm</td>
+												<td>Hybrid Mathematics</td>
+												<td>Mathematics Group Activities (All Levels) & Individual Tutoring
+													<br><a href="./pdfs/Hybrid Mathematics.pdf"><span style="color:blue; font-size: 100%">Curriculum: Student Choice</span></a>
+												</td>
+												<td>3:00-3:50pm</td>
 											</tr>
 										</tbody>
 									</table>
 								</div>
 							</section>
 							<br />
-							<h1>Curriculum</h1>
-							<p>Morning HSS classes will have required curriculum (details TBD). A detailed calendar of each week's lessons will be provided, and students will participate in a mock trial at the end of the semester.</p>
-							<br />
-							<p>Afternoon STEM classes will have required curriculum (details TBD) which will include lab kits on certain dates. A detailed calendar of each week's lessons & required lab kits will be provided.</p>
-							<br />
-							<p>The hybrid mathematics group activity accommodates students of all levels (arithmetic thru calculus), allowing students to grow at their own level while in a group setting with peers. In the hybrid mathematics tutoring session students independently work on their own curriculum with tutors available for help.</p>
+							
 						</div>
 					</div>
 
@@ -176,7 +195,7 @@
 								</article>
 							</section>
 							<ul class="copyright">
-								<li>&copy; Christian S.T.E.M. Education Group (CSEG). All rights reserved.</li>
+								<li>&copy; Christian STEM Education Group (CSEG). All rights reserved.</li>
 							</ul>
 						</div>
 					</footer>
