--- a/extracurricular.html
+++ b/extracurricular.html
@@ -47,8 +47,14 @@
 					<div id="main">
 						<div class="inner">
 							<h1>Extra Curricular Activities</h1>
-							<p>Information regarding field trips, workshops, science fairs, etc.</p>
 							
+							<p style="font-size: 130%"><a href="https://www.umt.edu/montana-science-fair/"><b>2026 Montana Science Fair, March 20th 2026</b></a></p>
+							<br />
+							<p style="font-size: 130%"><a href="https://hslda.org/post/which-standardized-test-and-setting-should-i-choose"><b>Year-End Standardized Testing, early June 2026</b></a></p>
+							<br />
+							<p style="font-size: 130%"><b>Family Field Trips</b></p>
+							<br />
+							<p style="font-size: 130%"><b>Community Workshops</b></p>
 						</div>
 					</div>
 
@@ -106,7 +112,7 @@
 								</article>
 							</section>
 							<ul class="copyright">
-								<li>&copy; Christian S.T.E.M. Education Group (CSEG). All rights reserved.</li>
+								<li>&copy; Christian STEM Education Group (CSEG). All rights reserved.</li>
 							</ul>
 						</div>
 					</footer>
