--- a/guidelines.html
+++ b/guidelines.html
@@ -45,25 +45,20 @@
 				<!-- Main -->
 					<div id="main">
 						<div class="inner">
-							<h1>Guidelines</h1>
+							<h1>Guidelines & Policies</h1>
+							<p><b><a href="./pdfs/CSEG Policies.pdf"><span style="color:blue">CSEG Policies</span></a></b></p>
+							<br />
 							<p>Christian, faith-based educational program.</p>
-							<br />
 							<p>Appropriate attire & behavior is required.</p>
-							<br />
 							<p>Parents are required to be onsite during classes.</p>
-							<br />
 							<p>Parents and infants (under 4 years of age) may attend classes, if space is available.</p>
-							<br />
-							<p>Each student must have their own curriculum & lab kits.</p>
-							<br />
+							<p>Each student must have their own curriculum & lab materials.</p>
 							<p>Pre-enrollment is required each semester.</p>
-							<br />
 							<p>Attendance is not required, but students are expected to keep up with the curriculum schedule.</p>
-							<br />
 							<p>Our program is synchronized with the CC F/E program held on the same day at the same facility, allowing parents access to the childcare & playground.</p>
 						</div>
 					</div>
-
+					
 				<!-- Footer -->
 					<footer id="footer">
 						<div class="inner">
@@ -118,7 +113,7 @@
 								</article>
 							</section>
 							<ul class="copyright">
-								<li>&copy; Christian S.T.E.M. Education Group (CSEG). All rights reserved.</li>
+								<li>&copy; Christian STEM Education Group (CSEG). All rights reserved.</li>
 							</ul>
 						</div>
 					</footer>
