--- a/membership.html
+++ b/membership.html
@@ -46,10 +46,11 @@
 					<div id="main">
 						<div class="inner">
 							<h1>Membership</h1>
+							<p>Membership is currently for students ages 12-14 years of age (7th-8th grade equivalents).</p>
 							<p><b>May 1, 2025</b> &nbsp; Priority enrollment begins for Classical Conversations families.</p>
 							<p><b>June 1, 2025</b> &nbsp; Open enrollment begins for all community members.</p>
 							<p style="line-height: 30%"><br></p>
-							<p>Fall 2025 membership is for students ages 12-14 years of age (7th-8th grade equivalents).</p>
+							<br>
 							<p style="line-height: 80%"><br></p>
 							<p><b><a href="./pdfs/CSEG Family Application.pdf"><span style="color:blue">CSEG Enrollment Application</span></a></b></p>
 							<p style="line-height: 10%"><br></p>
