--- a/schedule.html
+++ b/schedule.html
@@ -102,7 +102,7 @@
 											</tr>
 											<tr>
 												<td>STEM Assembly</td>
-												<td>Opening Prayer & Gratitudes
+												<td>Opening Prayer & Announcements
 													<br><a href="./pdfs/Weekly Gratitude Sheet.pdf"><span style="color:blue; font-size: 100%">Weekly Gratitudes</span></a>
 												</td>
 												<td>12:50-1:00pm</td>
