--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 									<ul style="padding-left: 1em;margin: 0 0 0 0;">
 										<li style="list-style: none;font-size: 110%;">Morning Humanities & Social Sciences (HSS) program covering logic, world history & literature, language arts, public speaking, etc.</li>
 										<li style="list-style: none;font-size: 110%;">Afternoon STEM program covering core sciences, technology & engineering, mathematics, etc.</li>
-										<li style="list-style: none;font-size: 110%;">Beginning Fall 2027 we hope to offer separate 10-12th grade programs.</li>
+										<li style="list-style: none;font-size: 110%;">We are currently offering 7-9th grade programs, and beginning Fall 2027 we will also offer 10-12th grade programs.</li>
 									</ul>
 									<li style="font-size: 130%"><b>Enrollment & Attendance Flexibility</b></li>
 									<ul style="padding-left: 1em;margin: 0 0 0 0;">
