Remove bold from CC

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 								<p style="font-size: 130%">
 								Welcome! 
 								<br />
-								We're a local homeschool family with young children (Kindergarten-6th grade) enrolled in the <a href="https://classicalconversations.com/community-search/?cid=r5N&program=Foundations"><b>Classical Conversations (CC) Foundations & Essentials (F/E)</b></a> program. 
+								We're a local homeschool family with young children (Kindergarten-6th grade) enrolled in the <a href="https://classicalconversations.com/community-search/?cid=r5N&program=Foundations">Classical Conversations (CC) Foundations & Essentials (F/E)</a> program. 
 								Instead of continuing with the CC Challenge program we're creating a separate, independent homeschool program for 7-12th graders with the following principles: 
 								<ul>
 									<li style="font-size: 130%"><b>Christian based</b></li>
