Edits per Diane

--- a/schedule.html
+++ b/schedule.html
@@ -84,14 +84,14 @@
 													<br><a href="./pdfs/US Civics.pdf"><span style="color:blue; font-size: 100%">Curriculum: Lifepac Civics</span></a>
 													
 													<br><b>Spring 2026</b> &nbsp; Speech & Debate w/ Mock Trial Capstone Event
-													<br><a href="./pdfs/Speech & Debate.pdf"><span style="color:blue; font-size: 100%">Curriculum: TBD</span></a>
+													<br><span style="color:blue; font-size: 100%">Curriculum: TBD</span>
 												</td>
 												<td>10:00-10:50am</td>
 											</tr>
 											<tr>
 												<td>Language Arts</td>
 												<td>Grammar, Speaking & Writing, English 
-													<br><a href="./pdfs/Tracks for Language Arts I, II, III.pdf"><span style="color:blue; font-size: 100%">Curriculum: Lifepac Language Arts - Track A</span></a>
+													<br><a href="./pdfs/Rotations for Language Arts I, II, III.pdf"><span style="color:blue; font-size: 100%">Curriculum: Lifepac Language Arts - Rotation A</span></a>
 												</td>
 												<td>11:00am-11:50am</td>
 											</tr>
@@ -110,7 +110,7 @@
 											<tr>
 												<td>General Sciences</td>
 												<td>Life, Physical, Earth & Space Sciences 
-													<br><a href="./pdfs/Tracks for General Sciences I, II, III.pdf"><span style="color:blue; font-size: 100%">Curriculum: Lifepac General Sciences I, II, III - Track A</span></a>
+													<br><a href="./pdfs/Rotations for General Sciences I, II, III.pdf"><span style="color:blue; font-size: 100%">Curriculum: Lifepac General Sciences I, II, III - Rotation A</span></a>
 												</td>
 												<td>1:00-1:50pm</td>
 											</tr>
