Update enrollment applications

--- a/membership.html
+++ b/membership.html
@@ -49,7 +49,7 @@
 							<p>Membership is currently for students ages 12-13 years of age (7th-8th grade equivalents).</p>
 							<p style="line-height: 20%"><br></p>
 							<p><b>May 1, 2025</b> &nbsp; Priority enrollment begins for Classical Conversations families.</p>
-							<p><b>June 1, 2025</b> &nbsp; Open enrollment begins for all community members.</p>
+							<p><b>June 1, 2025</b> &nbsp; Enrollment applications accepted from all local community members.</p>
 							<p style="line-height: 50%"><br></p>
 							<p><b><a href="./pdfs/CSEG Family Application.pdf"><span style="color:blue">CSEG Enrollment Application</span></a></b></p>
 							<p style="line-height: 10%"><br></p>
