--- a/index.html
+++ b/index.html
@@ -70,6 +70,11 @@
 								Instead of continuing with the CC Challenge program we're creating a separate, independent homeschool program for 7-12th graders with the following principles: 
 								<ul>
 									<li style="font-size: 130%"><b>Christian based</b></li>
+									<ul style="padding-left: 1em;margin: 0 0 0 0;">
+										<li style="list-style: none;font-size: 110%;">
+											Christian STEM Education Group is dedicated to glorifying God through a Christ-centered homeschooling community that fosters spiritual growth, academic excellence, and mutual respect.
+										</li>
+									</ul>
 									<li style="font-size: 130%"><b>Synchronized with CC F/E Program</b></li>
 									<ul style="padding-left: 1em;margin: 0 0 0 0;">
 										<li style="list-style: none;font-size: 110%;">
