--- a/index.html
+++ b/index.html
@@ -84,8 +84,8 @@
 									</ul>
 									<li style="font-size: 130%"><b>Comprehensive 7-12th Grade Curriculum</b></li>
 									<ul style="padding-left: 1em;margin: 0 0 0 0;">
-										<li style="list-style: none;font-size: 110%;">Morning Humanities & Social Sciences (HSS) program covering logic, world history & literature, language arts, public speaking, etc.</li>
-										<li style="list-style: none;font-size: 110%;">Afternoon STEM program covering core sciences, technology & engineering, mathematics, etc.</li>
+										<li style="list-style: none;font-size: 110%;">Morning <b style='color:red;'>Humanities & Social Sciences (HSS)</b> program covering logic, world history & literature, language arts, public speaking, etc.</li>
+										<li style="list-style: none;font-size: 110%;">Afternoon <b style='color:red;'> Science, Technology, Engineering & Mathematics (STEM)</b> program covering core sciences, mathematics, etc.</li>
 										<li style="list-style: none;font-size: 110%;">We are currently offering 7-9th grade programs, and beginning Fall 2027 we will also offer 10-12th grade programs.</li>
 									</ul>
 									<li style="font-size: 130%"><b>Enrollment & Attendance Flexibility</b></li>
