Fee per Semester

--- a/membership.html
+++ b/membership.html
@@ -65,8 +65,7 @@
 											<tr>
 												<th>Name</th>
 												<th>Description</th>
-												<th>Semester Fee</th>
-												<th>Yearly Fee</th>
+												<th>Fee per Semester</th>
 											</tr>
 										</thead>
 										<tbody>
@@ -74,24 +73,20 @@
 												<td>Facility Fee</td>
 												<td>Facility tithing & liability insurance</td>
 												<td>$50</td>
-												<td>$100</td>
 											</tr>
 											<tr>
 												<td>HSS Program Fee</td>
 												<td>Program fee for the morning Humanities & Social Sciences Program</td>
 												<td>$125</td>
-												<td>$250</td>
 											</tr>
 											<tr>
 												<td>STEM Program Fee</td>
 												<td>Program fee for the afternoon STEM Program</td>
 												<td>$125</td>
-												<td>$250</td>
 											</tr>
 											<tr>
 												<td>Curriculum</td>
 												<td>Curriculum & lab materials are purchased separately by the student</td>
-												<td>---</td>
 												<td>---</td>
 											</tr>
 											
@@ -100,7 +95,6 @@
 											<tr>
 												<td colspan="2"></td>
 												<td>$300</td>
-												<td>$600</td>
 											</tr>
 										</tfoot>
 									</table>
