HSS Change Fall 2025
Change US Civics to Anthropology & Sociology
Remove Mock Trial Capstone Event

--- a/schedule.html
+++ b/schedule.html
@@ -80,10 +80,10 @@
 											</tr>
 											<tr>
 												<td>HSS Elective</td>
-												<td><b>Fall 2025</b> &nbsp; US Civics
-													<br><a href="./pdfs/US Civics.pdf"><span style="color:blue; font-size: 100%">Curriculum: Lifepac Civics</span></a>
+												<td><b>Fall 2025</b> &nbsp; Anthropology & Sociology
+													<br><a href="./pdfs/Anthropology & Sociology.pdf"><span style="color:blue; font-size: 100%">Curriculum: Lifepac Anthropology & Sociology</span></a>
 													
-													<br><b>Spring 2026</b> &nbsp; Speech & Debate w/ Mock Trial Capstone Event
+													<br><b>Spring 2026</b> &nbsp; Speech & Debate
 													<br><span style="color:blue; font-size: 100%">Curriculum: TBD</span>
 												</td>
 												<td>10:00-10:50am</td>
