Remove CC from website

--- a/guidelines.html
+++ b/guidelines.html
@@ -55,7 +55,7 @@
 							<p>Each student must have their own curriculum & lab materials.</p>
 							<p>Pre-enrollment is required each semester.</p>
 							<p>Attendance is not required, but students are expected to keep up with the curriculum schedule.</p>
-							<p>Our program is synchronized with the CC F/E program held on the same day at the same facility, allowing parents access to the childcare & playground.</p>
+							<p>Our program is synchronized with a separate, elementary homeschool program held on the same day at the same facility, allowing parents access to the playground & afternoon childcare.</p>
 						</div>
 					</div>
 					
