Remove CC from website v2

--- a/index.html
+++ b/index.html
@@ -66,20 +66,13 @@
 								<p style="font-size: 130%">
 								Welcome! 
 								<br />
-								We're a local homeschool family with young children (Kindergarten-6th grade) enrolled in an <a href="https://classicalconversations.com/community-search/?cid=r5N&program=Foundations">elementary homeschool</a> program. 
-								Instead of continuing with that program we're creating a separate, independent homeschool program for 7-12th graders with the following principles: 
+								We're a local homeschool family with young children (Kindergarten-6th grade) enrolled in an elementary homeschool program that we love. 
+								Instead of continuing with that program beyond elementary grades, we are creating a separate, independent homeschool program for 7-12th graders with the following principles: 
 								<ul>
 									<li style="font-size: 130%"><b>Christian based</b></li>
 									<ul style="padding-left: 1em;margin: 0 0 0 0;">
 										<li style="list-style: none;font-size: 110%;">
 											Christian STEM Education Group is dedicated to glorifying God through a Christ-centered homeschooling community that fosters spiritual growth, academic excellence, and mutual respect.
-										</li>
-									</ul>
-									<li style="font-size: 130%"><b>Synchronized with Elementary Homeschool Program</b></li>
-									<ul style="padding-left: 1em;margin: 0 0 0 0;">
-										<li style="list-style: none;font-size: 110%;">
-											Our goal is to support parents in our homeschool community who wish to keep their K-6th grade students in the separate, elementary homeschool program, but who wish to enroll their 7-12th grade students in our STEM and Humanities & Social Sciences programs.
-											We will offer weekly classes on the same day and in the same facility as the elementary homeschool program (but without interfering with the elementary homeschool program).
 										</li>
 									</ul>
 									<li style="font-size: 130%"><b>Comprehensive 7-12th Grade Curriculum</b></li>
