--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 								We're a local homeschool family with young children (Kindergarten-6th grade) enrolled in an elementary homeschool program that we love. 
 								Instead of continuing with that program beyond elementary grades, we are creating a separate, independent homeschool program for 7-12th graders with the following principles: 
 								<ul>
-									<li style="font-size: 130%"><b>Christian based</b></li>
+									<li style="font-size: 130%"><b>Christian Based</b></li>
 									<ul style="padding-left: 1em;margin: 0 0 0 0;">
 										<li style="list-style: none;font-size: 110%;">
 											Christian STEM Education Group is dedicated to glorifying God through a Christ-centered homeschooling community that fosters spiritual growth, academic excellence, and mutual respect.
