--- a/schedule.html
+++ b/schedule.html
@@ -49,7 +49,7 @@
 							<section>
 								<h3 style="letter-spacing: 0.15em;">Classes held weekly on Mondays, 15 weeks per semester</h6>
 								<p style="font-size: 120%"><b>Fall 2025</b></p>
-								<p style="font-size: 120%">Sep 8 - Dec 15 <span style="font-size: 75%"> &nbsp; Student orientation in late Aug, details TBD </span></p>
+								<p style="font-size: 120%">Sep 8 - Dec 15 <span style="font-size: 75%"> &nbsp; Student orientation on Aug 25 at 11am</span></p>
 								<p style="line-height: 80%"><br></p>
 								<p style="font-size: 120%"><b>Spring 2026</b></p>
 								<p style="font-size: 120%">Jan 5 - Apr 13 </p>
