--- a/schedule.html
+++ b/schedule.html
@@ -138,6 +138,10 @@
 							</section>
 							<br />
 							
+							<p style="font-size: 120%"><b>Fall 2025: Assignments & Notes</b></p>
+							<a href="./pdfs/STEM Fall 2025_ Pre-Class.pdf"><span style="color:blue; font-size: 100%">STEM Fall 2025 Pre-Class Assignments</span></a>
+							<br />
+							
 						</div>
 					</div>
 
