--- a/schedule.html
+++ b/schedule.html
@@ -141,6 +141,8 @@
 							<p style="font-size: 120%"><b>Fall 2025: Assignments & Notes</b></p>
 							<a href="./pdfs/STEM Fall 2025_ Pre-Class.pdf"><span style="color:blue; font-size: 100%">STEM Fall 2025 Pre-Class Assignments</span></a>
 							<br />
+							<a href="./pdfs/STEM Fall 2025_ Week 1.pdf"><span style="color:blue; font-size: 100%">STEM Fall 2025 Week 1 Assignments</span></a>
+							<br />
 							
 						</div>
 					</div>
