--- a/schedule.html
+++ b/schedule.html
@@ -138,14 +138,9 @@
 							</section>
 							<br />
 							
-							<p style="font-size: 120%"><b>Fall 2025: Assignments & Notes</b></p>
-							<a href="./pdfs/STEM Fall 2025_ Pre-Class.pdf"><span style="color:blue; font-size: 100%">STEM Fall 2025 Pre-Class Assignments</span></a>
-							<br />
-							<a href="./pdfs/STEM Fall 2025_ Week 1.pdf"><span style="color:blue; font-size: 100%">STEM Fall 2025 Week 1 Assignments</span></a>
-							<!-- <p style="font-size: 75%"><a href="https://www.youtube.com/watch?v=ZAL2pLSFfpY">Video explaining the physics behind curveballs</a></p> -->
-							<br />
-							<a href="./pdfs/STEM Fall 2025_ Week 2.pdf"><span style="color:blue; font-size: 100%">STEM Fall 2025 Week 2 Assignments</span></a>
-							<br />
+							<a href="assignments.STEM.Fall2025.html">
+								<p style="font-size: 120%"><b><u>STEM Fall 2025: Assignments & Notes</u></b></p>
+							</a>
 						</div>
 					</div>
 
