--- a/assignments.STEM.Fall2025.html
+++ b/assignments.STEM.Fall2025.html
@@ -60,6 +60,17 @@
 										<tbody>
 											<tr>
 												<td>
+													<a href="./pdfs/STEM Fall 2025_ Week 4.pdf"><span style="color:blue; font-size: 100%">STEM Fall 2025 Week 4 Assignments</span></a>
+												</td>
+												<td><span style="font-size: 100%">Oct 6</span></td>
+												<td>
+													<p style="font-size: 100%"><a href="https://www.youtube.com/watch?v=QhcerJZD1Gc">Video explaining how Dijkstra's Algorithm is used by Google Maps</a></p>
+													<p style="font-size: 100%"><a href="https://www.youtube.com/watch?v=qlX_blR_74I">Video of the replica Bleriot XI flight</a></p>
+													<p style="font-size: 100%"><a href="https://airandspace.si.edu/collection-objects/bleriot-xi/nasm_A19500095000">Smithsonian description of the Bleriot XI</a></p>
+												</td>
+											</tr>
+											<tr>
+												<td>
 													<a href="./pdfs/STEM Fall 2025_ Week 3.pdf"><span style="color:blue; font-size: 100%">STEM Fall 2025 Week 3 Assignments</span></a>
 												</td>
 												<td><span style="font-size: 100%">Sep 29</span></td>
